Stop truncating page titlesOverflow is now controlled with CSS.

--- a/Dnn.AdminExperience/ClientSide/Pages.Web/src/components/dnn-persona-bar-page-treeview/src/styles.less
+++ b/Dnn.AdminExperience/ClientSide/Pages.Web/src/components/dnn-persona-bar-page-treeview/src/styles.less
@@ -68,6 +68,13 @@
         top: -5px;
         font-weight: bold;
         margin-left: 5px;
+        
+        display: inline-block;
+        width: 140px;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        overflow: hidden;
+
         p {
             display: inline;
         }
